grammar.js
    identifier: $ => /[a-zA-Z_][a-zA-Z0-9_]*/
                     ,
    /*
     * dql.ebnf:182
     * fully_qualified_name ::= /[a-zA-Z_\\][a-zA-Z0-9_\\]*∕
     */
    string: $ => /'([^']|'')*'/
                 ,
    /*
     * dql.ebnf:188
     * char ::= /'[^']'/
     */
    integer: $ => /-?[0-9]+/
                  ,
    /*
     * dql.ebnf:194
     * float ::= /-?[0-9]*\.[0-9]+([eE][+-]?[0-9]+)?/
     */
    boolean: $ => choice("true", "false")
                  ,
    /*
     * dql.ebnf:200
     * TypeDiscriminator ::= IdentificationVariable
     */
