test/corpus/case_expressions.txt
================================================================================
Simple CASE expression
================================================================================

SELECT u.name, CASE WHEN u.age < 18 THEN 'Minor' ELSE 'Adult' END FROM User u

--------------------------------------------------------------------------------

(QueryLanguage
  (SelectStatement
    (SelectClause
      (SelectExpression
        (ScalarExpression
          (StateFieldPathExpression
            (IdentificationVariable
              (identifier))
            (StateField
              (SimpleStateField
                (FieldIdentificationVariable
                  (identifier)))))))
      (SelectExpression
        (CaseExpression
          (GeneralCaseExpression
            (WhenClause
              (ConditionalExpression
                (ConditionalTerm
                  (ConditionalFactor
                    (ConditionalPrimary
                      (SimpleConditionalExpression
                        (ComparisonExpression
                          (ArithmeticExpression
                            (SimpleArithmeticExpression
                              (ArithmeticTerm
                                (ArithmeticFactor
                                  (ArithmeticPrimary
                                    (SingleValuedPathExpression
                                      (StateFieldPathExpression
                                        (IdentificationVariable
                                          (identifier))
                                        (StateField
                                          (SimpleStateField
                                            (FieldIdentificationVariable
                                              (identifier)))))))))))
                          (ComparisonOperator)
                          (ArithmeticExpression
                            (SimpleArithmeticExpression
                              (ArithmeticTerm
                                (ArithmeticFactor
                                  (ArithmeticPrimary
                                    (Literal
                                      (integer)))))))))))))
              (ScalarExpression
                (StringPrimary
                  (string))))
            (ScalarExpression
              (StringPrimary
                (string)))))))
    (FromClause
      (IdentificationVariableDeclaration
        (RangeVariableDeclaration
          (AbstractSchemaName
            (identifier))
          (AliasIdentificationVariable
            (identifier)))))))

================================================================================
Multiple CASE WHEN clauses
================================================================================

SELECT u.name, 
       CASE WHEN u.age < 18 THEN 'Minor' 
            WHEN u.age < 65 THEN 'Adult' 
            ELSE 'Senior' 
       END as ageGroup 
FROM User u

--------------------------------------------------------------------------------

(QueryLanguage
  (SelectStatement
    (SelectClause
      (SelectExpression
        (ScalarExpression
          (StateFieldPathExpression
            (IdentificationVariable
              (identifier))
            (StateField
              (SimpleStateField
                (FieldIdentificationVariable
                  (identifier)))))))
      (SelectExpression
        (ScalarExpression
          (CaseExpression
            (GeneralCaseExpression
              (WhenClause
                (ConditionalExpression
                  (ConditionalTerm
                    (ConditionalFactor
                      (ConditionalPrimary
                        (SimpleConditionalExpression
                          (ComparisonExpression
                            (ArithmeticExpression
                              (SimpleArithmeticExpression
                                (ArithmeticTerm
                                  (ArithmeticFactor
                                    (ArithmeticPrimary
                                      (SingleValuedPathExpression
                                        (StateFieldPathExpression
                                          (IdentificationVariable
                                            (identifier))
                                          (StateField
                                            (SimpleStateField
                                              (FieldIdentificationVariable
                                                (identifier)))))))))))
                            (ComparisonOperator)
                            (ArithmeticExpression
                              (SimpleArithmeticExpression
                                (ArithmeticTerm
                                  (ArithmeticFactor
                                    (ArithmeticPrimary
                                      (Literal
                                        (integer)))))))))))))
                (ScalarExpression
                  (StringPrimary
                    (string))))
              (WhenClause
                (ConditionalExpression
                  (ConditionalTerm
                    (ConditionalFactor
                      (ConditionalPrimary
                        (SimpleConditionalExpression
                          (ComparisonExpression
                            (ArithmeticExpression
                              (SimpleArithmeticExpression
                                (ArithmeticTerm
                                  (ArithmeticFactor
                                    (ArithmeticPrimary
                                      (SingleValuedPathExpression
                                        (StateFieldPathExpression
                                          (IdentificationVariable
                                            (identifier))
                                          (StateField
                                            (SimpleStateField
                                              (FieldIdentificationVariable
                                                (identifier)))))))))))
                            (ComparisonOperator)
                            (ArithmeticExpression
                              (SimpleArithmeticExpression
                                (ArithmeticTerm
                                  (ArithmeticFactor
                                    (ArithmeticPrimary
                                      (Literal
                                        (integer)))))))))))))
                (ScalarExpression
                  (StringPrimary
                    (string))))
              (ScalarExpression
                (StringPrimary
                  (string))))))
        (AliasResultVariable
          (identifier))))
    (ERROR
      (identifier))
    (FromClause
      (IdentificationVariableDeclaration
        (RangeVariableDeclaration
          (AbstractSchemaName
            (identifier))
          (AliasIdentificationVariable
            (identifier)))))))
