test/corpus/crud_operations.txt
================================================================================
UPDATE query
================================================================================

UPDATE User u SET u.name = 'Jane' WHERE u.id = 1

--------------------------------------------------------------------------------

(QueryLanguage
  (UpdateStatement
    (UpdateClause
      (AbstractSchemaName
        (identifier))
      (AliasIdentificationVariable
        (identifier))
      (UpdateItem
        (SingleValuedPathExpression
          (StateFieldPathExpression
            (IdentificationVariable
              (identifier))
            (StateField
              (SimpleStateField
                (FieldIdentificationVariable
                  (identifier))))))
        (NewValue
          (SimpleArithmeticExpression
            (ArithmeticTerm
              (ArithmeticFactor
                (ArithmeticPrimary
                  (Literal
                    (string)))))))))
    (WhereClause
      (ConditionalExpression
        (ConditionalTerm
          (ConditionalFactor
            (ConditionalPrimary
              (SimpleConditionalExpression
                (ComparisonExpression
                  (ArithmeticExpression
                    (SimpleArithmeticExpression
                      (ArithmeticTerm
                        (ArithmeticFactor
                          (ArithmeticPrimary
                            (SingleValuedPathExpression
                              (StateFieldPathExpression
                                (IdentificationVariable
                                  (identifier))
                                (StateField
                                  (SimpleStateField
                                    (FieldIdentificationVariable
                                      (identifier)))))))))))
                  (ComparisonOperator)
                  (ArithmeticExpression
                    (SimpleArithmeticExpression
                      (ArithmeticTerm
                        (ArithmeticFactor
                          (ArithmeticPrimary
                             (Literal
                               (integer))))))))))))))))

================================================================================
DELETE query
================================================================================

DELETE FROM User u WHERE u.active = false

--------------------------------------------------------------------------------

(QueryLanguage
  (DeleteStatement
    (DeleteClause
      (AbstractSchemaName
        (identifier))
      (AliasIdentificationVariable
        (identifier)))
    (WhereClause
      (ConditionalExpression
        (ConditionalTerm
          (ConditionalFactor
            (ConditionalPrimary
              (SimpleConditionalExpression
                (ComparisonExpression
                  (ArithmeticExpression
                    (SimpleArithmeticExpression
                      (ArithmeticTerm
                        (ArithmeticFactor
                          (ArithmeticPrimary
                            (SingleValuedPathExpression
                              (StateFieldPathExpression
                                (IdentificationVariable
                                  (identifier))
                                (StateField
                                  (SimpleStateField
                                    (FieldIdentificationVariable
                                      (identifier)))))))))))
                  (ComparisonOperator)
                  (ArithmeticExpression
                    (SimpleArithmeticExpression
                      (ArithmeticTerm
                        (ArithmeticFactor
                          (ArithmeticPrimary
                             (Literal
                               (boolean))))))))))))))))
